--- a/reponsivo.css
+++ b/reponsivo.css
@@ -1,11 +1,23 @@
 @media screen and (max-width: 500px) {
    
-    .desconto{
+    .desconto {
        
-        width: 400px;
-        height: 31px;
-        left: 58px;
-        top: 15px;
+        width: 3755x;
+        height: 30px;
+
+ 
+
+  
+        
+    }
+
+    .desconto #ganhe{
+        font-size: 10px;
+    }
+    .name-loja{
+        padding: 30px;
+        font-size: 20px;
+       
         
     }
 }
@@ -17,7 +29,7 @@
         background-position: center;
 
         height: 330px;
-        width: 400px;
+        width: 375px;
         left: 0px;
         top: 140px;
         border-radius: 0px;
@@ -25,38 +37,43 @@
  
 }
 .texto-home{
-    padding: 120px;
+    padding: 80px;
     font-size: 14px;
     
 }
+.destaques{
+ 
+    padding: 50px;
+    font-size: 20px;
+  }
     
 }
 @media screen and (max-width:500px){
 
     .box-tenis1{
     position: absolute;
-    height: 200px;
-    width: 300px;
-    left: 50px;
+    height: 230px;
+    width: 340px;
+    left: 20px;
     top: 724px;
     
 
     }
 
     .box-tenis2{
-        height: 200px;
-        width: 300px;
-        left: 50px;
-        top: 1056px;
+        height: 230px;
+        width: 340px;
+        left: 20px;
+        top: 980px;
      
         
 
     }
     .box-tenis3{
-        height: 200px;
-        width: 300px;
-        left: 50px;
-        top: 1388px;
+        height: 230px;
+        width: 340px;
+        left: 20px;
+        top: 1240px;
         
 
 
@@ -64,51 +81,52 @@
 
     .box-tenis4{
 
-        height: 200px;
-        width: 300px;
-        left: 50px;
-        top: 1720px;
-        border-radius: 0px;
+        height: 230px;
+        width: 340px;
+        left: 20px;
+        top: 1500px;
+     
         
     }
 
     .box-tenis5{
-        height: 200px;
-    width: 300px;
-    left: 50px;
-        top: 2052px;
-        border-radius: 0px;
+        height: 230px;
+        width: 340px;
+        left: 20px;
+        top: 1760px;
+    
         
         
     }
 
     .box-tenis6{
-        height: 200px;
-        width: 300px;
-        left: 50px;
-        top: 2384px;
-        border-radius: 0px;
+        height: 230px;
+        width: 340px;
+        left: 20px;
+        top: 2020px;
         
         
     }
 
     .box-tenis7{
-        height: 200px;
-        width: 300px;
-        left: 50px;
-        top: 2716px;
-        border-radius: 0px;
+        height: 230px;
+        width: 340px;
+        left: 20px;
+        top: 2280px;
         
         
     }
 
     .box-tenis8{
-        height: 200px;
-        width: 300px;
-        left: 50px;
-        top: 3048px;
-        border-radius: 0px;
+        height: 230px;
+        width: 340px;
+        left: 20px;
+        top: 2540px;
+
         
+    }
+    .tenis{
+      width: 330px;
     }
 }
 
@@ -118,10 +136,11 @@
 .diretos-end{
 
 height: 40px;
-width: 400px;
+width: 375px;
 left: 0px;
-top: 3400px;
+top: 2800px;
 border-radius: 0px;
+font-size: 16px;
 
 }
 
