--- a/index.css
+++ b/index.css
@@ -61,18 +61,23 @@
     background-color: var(--title);
     color: var(--white);
     text-align: center;
-    font-size: 30px;
+    font-size: 15px;
     width: 100%;
   }
   .name-loja{
-      padding: 30px;
-      font-size: 30px;
+      padding: 20px;
+      font-size: 50px;
       text-align: center;
+      background-color:var(--bgSite);
+      width: 100%;
+      height: 200px;
+      
   }
 
 
+
   .wallpa{
-    background-image:linear-gradient(rgba(0,0,0,1), rgba(0,0,0,0)), url(/img/wallpaper.jpeg);
+    background-image:linear-gradient(rgba(0,0,0,1), rgba(0,0,0,0)), url(../img/wallpaper.jpeg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -84,27 +89,28 @@
     width: 100%; /*largura*/
     height: 578px;
     left: 0px;
-    top: 119px;
+    top: 145px;
   }
   .texto-home{
       color: var(--bgSite);
       padding: 150px;
       font-size: 40px;
+      margin-top: -100px;
   }
 
   .destaques{
     text-align: center;
-    padding: 50px;
-    font-size: 40px;
+    padding: 30px;
+    font-size: 30px;
   }
 
   .box-tenis1{
     background-color: var(--bgCard);
     position: absolute;
-    width: 430px;
-    height: 280px;
-    left: 430px;
-    top: 1000px;
+    width: 280px;
+    height: 190px;
+    left: 70px;
+    top: 900px;
 
 
   }
@@ -112,62 +118,62 @@
   .box-tenis2{
     background-color: var(--bgCard);
     position: absolute;
-    width: 430px;
-    height: 280px;
-    left: 870px;
-    top: 1000px;
+    width: 280px;
+    height: 190px;
+    left: 360px;
+    top: 900px;
   }
   .box-tenis3{
     background-color: var(--bgCard);
     position: absolute;
-    width: 430px;
-    height: 280px;
-    left: 1310px;
-    top: 1000px;
+    width: 280px;
+    height: 190px;
+    left: 650px;
+    top: 900px;
   }
   .box-tenis4{
     background-color: var(--bgCard);
     position: absolute;
-    width: 430px;
-    height: 280px;
-    left: 1750px;
-    top: 1000px;
+    width: 280px;
+    height: 190px;
+    left: 940px;
+    top: 900px;
   }
   .box-tenis5{
     background-color: var(--bgCard);
     position: absolute;
-    width: 430px;
-    height: 280px;
-    left: 430px;
-    top: 1300px;
+    width: 280px;
+    height: 190px;
+    left: 70px;
+    top: 1100px;
 
 
   }
   .box-tenis6{
     background-color: var(--bgCard);
     position: absolute;
-    width: 430px;
-    height: 280px;
-    left: 870px;
-    top: 1300px;
+    width: 280px;
+    height: 190px;
+    left: 360px;
+    top: 1100px;
 
   }
   .box-tenis7{
     background-color: var(--bgCard);
     position: absolute;
-    width: 430px;
-    height: 280px;
-    left: 1310px;
-    top: 1300px;
+    width: 280px;
+    height: 190px;
+    left: 650px;
+    top: 1100px;
 
   }
   .box-tenis8{
     background-color: var(--bgCard);
     position: absolute;
-    width: 430px;
-    height: 280px;
-    left: 1750px;
-    top: 1300px;
+    width: 280px;
+    height: 190px;
+    left: 940px;
+    top: 1100px;
 
   }
 
@@ -183,10 +189,16 @@
     background-color: var(--title);
     color: var(--white);
     text-align: center;
-    font-size: 30px;
+    font-size: 15px;
     position: absolute;
     width: 100%;
-    height: 50px;
-    top: 1750px;
+    height: 20px;
+    top: 1400px;
+    
+  }
+  .img-position{
+    position: absolute;
+    width:300px;
+
   }
 
